Fixed the mobile responsive monitor cut off and snapping issue. Removed unneeded styles from the global.css file. Two sections on the home page functional.
Need to still fix the stackable cards on the mobile responsive web pages.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -82,28 +82,6 @@ body {
   font-display: swap;
 }
 
-/* Adjust scroll snap behavior
-html {
-  scroll-snap-type: y mandatory;
-  overflow-y: scroll;
-  scroll-behavior: smooth;
-  height: 100vh;
-  overflow: hidden; 
-} */
-
-/* body {
-  height: 100vh;
-  overflow-y: auto;
-  scroll-snap-type: y mandatory;
-} */
-/* 
-section {
-  scroll-snap-align: start;
-  scroll-snap-stop: always; */
-  /* height: 100vh; Ensure consistent height */
-  /* overflow: hidden; /* Prevent internal scrolling */
-
-/* Disable scroll snap for touch devices */
 @media (hover: none) and (pointer: coarse) {
   html {
     scroll-snap-type: none;
